# ganglia-mod_ibmame

./: README.md  configure.ac
gmond/: Makefile.am
gmond/modules/: Makefile.am
gmond/modules/conf.d/: ibmame.conf
gmond/modules/ibmame/: Makefile.am  mod_ibmame.c
